--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,11 @@
 ---
 applications:
-- name: coordinate-transform
+- name: ctdemo
   memory: 256mb
   instances: 1
-  # host: coordinate-transform-${random-word}
+  host: ctdemo
   command: node index.js
-  random-route: true
+#  random-route: true
   services:
     - gis-pg-service
     - log-drain
